--- a/style.css
+++ b/style.css
@@ -88,4 +88,10 @@ p {
         .icon-container img {
             margin-right:  15px; 
             margin-bottom: 15px;
+        }
+
+        .icon-container a:hover img {
+        transform: scale(1.1); 
+        transition: transform 0.1s ease; 
+    
 }
