--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-        font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
         }
         .navbar-brand{
             font-size: 33px;
@@ -20,7 +20,6 @@ p {
         .icones {
             padding-left: 5px;
         }
-
         .titulosBrancos {
             text-decoration: underline;
             text-underline-position: under;
@@ -38,14 +37,13 @@ p {
             font-weight: 700;
             color: #18bc9c
         }
-
         .paragrafoBrancos {
             color: white !important;
         }
-
-
         .jumbotron {
             margin-bottom: 0px;
+            margin-bottom: 0px;
+            border-radius: 0;
         }
 
         html {
@@ -55,10 +53,17 @@ p {
         p {
             color: black !important;
         }
-
         .corPrimaria {
             background-color: #1d4d5c;
             background: linear-gradient(120deg, #408ba1, #0f3944);
+        }
+        .icon{
+            margin-bottom: 16px;
+            height: 40%; 
+            width: auto;
+            width: 40px;
+            max-width: auto;
+            border-radius: 100%;
         }
         h4{
             color: rgb(236, 236, 236);
@@ -89,7 +94,6 @@ p {
             margin-right:  15px; 
             margin-bottom: 15px;
         }
-
         .icon-container a:hover img {
         transform: scale(1.1); 
         transition: transform 0.1s ease; 
