--- a/style.css
+++ b/style.css
@@ -97,5 +97,11 @@ p {
         .icon-container a:hover img {
         transform: scale(1.1); 
         transition: transform 0.1s ease; 
-    
-}
+        }
+        .expand-on-hover {
+        transition: transform 0.3s ease;
+        display: inline-block; /* Garante que a transição de escala funcione corretamente */
+        }
+        .expand-on-hover:hover {
+        transform: scale(1.1);
+        }
